# PeopleCounter

./: CMakeLists.txt  main.cpp
